syntax = "proto3";

package pb;

import "barber/barbershop_service.proto";
import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/barber";

// insert
message CreateBarberShopServiceRequest{
    int32 category_id = 1;
    string barber_shop_id = 2;
    int32 gender_id = 3;
    string name = 4;
    int32 timer = 5;
    float price = 6;
    optional string description = 7;
    optional string image_url = 8;
    repeated string combo_services = 9;
}

message CreateBarberShopServiceResponse{
    BarberShopService barber_shop_service = 1;
}

// detail
message GetBarberShopServiceRequest{
    string id = 1;
}

message GetBarberShopServiceResponse {
    BarberShopService barber_shop_service = 1;
}

//
message ListServiceForComboServiceRequest{
    string barber_shop_id = 1;
}

message ListServiceForComboServiceResponse {
    repeated ServiceForComboService barber_shop_services = 1;
}

// list
message ListBarberShopServiceRequest{
    string barber_shop_id = 1;
}

message ListBarberShopServiceResponse {
    repeated BarberShopService barber_shop_services = 1;
}

// update
message UpdateBarberShopServiceRequest{
    string id = 1;
    string barber_shop_id = 2;
    optional int32 gender_id = 3;
    optional string name = 4;
    optional int32 timer = 5;
    optional float price = 6;
    optional string description = 7;
    optional string image_url = 8;
    optional bool is_active = 9;
    optional int32 category_id = 10;
    repeated string combo_services = 11;
    optional float discount_price = 12;
    optional google.protobuf.Timestamp discount_start_time = 13;
    optional google.protobuf.Timestamp discount_end_time = 14;
}

message UpdateBarberShopServiceResponse{
    string message = 1;
}

// delete
message DeleteBarberShopServiceRequest{
    string id = 1;
}

message DeleteBarberShopServiceResponse{
    string message = 1;
}

// category position
message UpdateCategoryPositionRequest{
    repeated CategoryPosition category_positions = 1;
    string barber_shop_id = 2;
}

message UpdateCategoryPositionResponse{
    string message = 1;
}